tests/ui/suggestions/suggest-boxed-empty-block.stderr
error[E0308]: mismatched types
  --> $DIR/suggest-boxed-empty-block.rs:10:9
   |
LL |     foo({});
   |         ^^ expected `Box<_>`, found `()`
   |
   = note: expected struct `Box<_>`
           found unit type `()`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
help: store this in the heap by calling `Box::new`
   |
LL -     foo({});
LL +     foo(Box::new(()));
   |

error[E0308]: mismatched types
  --> $DIR/suggest-boxed-empty-block.rs:11:12
   |
LL |     bar(|| {});
   |            ^^ expected `Box<_>`, found `()`
   |
   = note: expected struct `Box<_>`
           found unit type `()`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
help: store this in the heap by calling `Box::new`
   |
LL -     bar(|| {});
LL +     bar(|| Box::new(()));
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
